# CG-Coursework

./: CMakeLists.txt  LICENSE  README.md
inc/: BackfaceCuller.h  BarycentricCalculator.h  Clipper.h  Color.h  ConvolutionFilter.h  DepthBuffer.h  Fragment.h  FragmentShader.h  IPixelReceiver.h  Lights.h  Material.cpp  Material.h  MaterialLibrary.h  Model.cpp  Model.h  Modeller.h  Primitive.h  PrimitiveAssembler.h  PrimitiveSpecification.h  Rasterizer.h  Renderable.h  Renderer.h  Scene.h  SceneEntity.h  Vertex.h  VertexAssembler.h  VertexShader.h  VertexSpecification.h  mathematics.h
inc/gui/: AddDirect.h  AddModel.h  AddPoint.h  AddSpot.h  EditDirect.h  EditModel.h  EditPoint.h  EditSpot.h  GraphicsView.h  GuiRunner.h  MainWindow.h  ModelTransformFrame.h  MoveFrame.h  PanelLabeledFrame.h  PixelReceiver.h  RotateFrame.h  SceneManager.h  VectorEdit.h
inc/light/: DirectionalLight.h  PointLight.h  SpotLight.h
inc/transform/: DirectionTransform.h  PositionTransform.h  RotationTransform.h  ScaleTransform.h
inc/visual/: Camera.h  FieldOfView.h  View.h  Viewport.h
src/: BackfaceCuller.cpp  BarycentricCalculator.cpp  Clipper.cpp  Color.cpp  DepthBuffer.cpp  Fragment.cpp  FragmentShader.cpp  IPixelReceiver.cpp  Lights.cpp  MaterialLibrary.cpp  Modeller.cpp  Primitive.cpp  PrimitiveAssembler.cpp  PrimitiveSpecification.cpp  Rasterizer.cpp  Renderable.cpp  Renderer.cpp  Scene.cpp  SceneEntity.cpp  Vertex.cpp  VertexAssembler.cpp  VertexShader.cpp  VertexSpecification.cpp  main.cpp
src/Transform/: RotationTransform.cpp
src/gui/: AddDirect.cpp  AddModel.cpp  AddPoint.cpp  AddSpot.cpp  ConvolutionFilter.cpp  EditDirect.cpp  EditModel.cpp  EditPoint.cpp  EditSpot.cpp  GraphicsView.cpp  GuiRunner.cpp  MainWindow.cpp  ModelTransformFrame.cpp  MoveFrame.cpp  PanelLabeledFrame.cpp  PixelReceiver.cpp  RotateFrame.cpp  SceneManager.cpp  VectorEdit.cpp
src/light/: DirectionalLight.cpp  PointLight.cpp  SpotLight.cpp
src/transform/: PositionTransform.cpp  ScaleTransform.cpp
src/visual/: Camera.cpp  FieldOfView.cpp  View.cpp  Viewport.cpp
